[package]
name = "acerolajam-0"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = {version = "0.13.0", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.23.2"
bevy_tweening = "0.10.0"
bevy_xpbd_3d = "0.4.2"
